@@ -121,6 +121,20 @@ namespace Astroid {
     default_config.put ("general.time.same_year", "%b %-e");
     default_config.put ("general.time.diff_year", "%x");
 
+    /* thread index cell theme */
+    default_config.put ("thread_index.cell.font_description", "default");
+    default_config.put ("thread_index.cell.line_spacing", 2);
+    default_config.put ("thread_index.cell.date_length", 10);
+    default_config.put ("thread_index.cell.message_count_length", 4);
+    default_config.put ("thread_index.cell.authors_length", 20);
+    default_config.put ("thread_index.cell.tags_length", 80);
+
+    default_config.put ("thread_index.cell.subject_color", "#807d74");
+    default_config.put ("thread_index.cell.subject_color_selected", "#000000");
+
+    default_config.put ("thread_index.cell.tags_color", "#31587a");
+
+
     /* editor */
     default_config.put ("editor.gvim.cmd", "gvim");
     default_config.put ("editor.gvim.args", "-f -c 'set ft=mail' '+set fileencoding=utf-8' '+set ff=unix' '+set enc=utf-8'"); //  '+/^\\s*\\n/' '+nohl'
